--- a/layout/_partial/after_footer.jade
+++ b/layout/_partial/after_footer.jade
@@ -1,5 +1,5 @@
 if theme.fancybox == true
-  script(type='text/javascript', src='//cdn.bootcss.com/fancybox/2.1.5/jquery.fancybox.pack.js', async)
+  script(type='text/javascript', src='//cdn.bootcss.com/fancybox/2.1.5/jquery.fancybox.pack.js')
   script(type='text/javascript', src=url_for(theme.js) + '/fancybox.js' + '?v=' + theme.version, async)
   link(rel='stylesheet', type='text/css', href=url_for(theme.css) + '/jquery.fancybox.css' + '?v=' + theme.version)
 
@@ -77,3 +77,4 @@ if page.mathjax2
 
 script(type='text/javascript', src=url_for(theme.js) + '/codeblock-resizer.js' + '?v=' + theme.version)
 script(type='text/javascript', src=url_for(theme.js) + '/smartresize.js' + '?v=' + theme.version)
+script(type='text/javascript', src=url_for(theme.js) + '/tabbed-codeblocks.js' + '?v=' + theme.version)
