修改样式为gitbook

--- a/layout/_partial/helpers.jade
+++ b/layout/_partial/helpers.jade
@@ -1,8 +1,8 @@
-mixin a_with_current(href, content, id)
+mixin a_with_current(href, content)
   - var url = url_for(href)
   if (href == '.' && (is_home() || is_post())) || is_current(href)
     a.current(href=url)
-      i(class='fa' + ' ' + id)= ' ' + content
+      =content
   else if (href == 'archives/' && is_tag())
     a.current(href=url)
       i(class='fa' + ' ' + id)= ' ' + content
@@ -11,7 +11,7 @@ mixin a_with_current(href, content, id)
       i(class='fa' + ' ' + id)= ' ' + content
   else
     a(href=url)
-      i(class='fa' + ' ' + id)= ' ' + content
+      =content
 
 mixin title(page)
   if page
