--- a/layout/base.jade
+++ b/layout/base.jade
@@ -27,7 +27,7 @@ html(lang='#{config.language}')
     link(rel='stylesheet', type='text/css', href='//cdn.bootcss.com/pure/0.6.0/pure-min.css')
     link(rel='stylesheet', type='text/css', href='//cdn.bootcss.com/pure/0.6.0/grids-responsive-min.css')
     link(rel='stylesheet', type='text/css', href=url_for(theme.css) + '/style.css' + '?v=' + theme.version)
-   
+
     link(rel='stylesheet', href='//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css')
     script(type='text/javascript', src='//cdn.bootcss.com/jquery/3.1.1/jquery.min.js')
     link(rel='Shortcut Icon', type='image/x-icon', href=url_for('favicon.ico'))
@@ -38,13 +38,13 @@ html(lang='#{config.language}')
 
   body: .body_container
     #header
-      .site-name
-        h1.hidden= current_title
-        a#logo(href=url_for('.'))= config.title
-        p.description= config.subtitle
-      #nav-menu
-        - for (var i in theme.menu)
-          +a_with_current(theme.menu[i].directory, __(theme.menu[i].page), theme.menu[i].icon)
+      .container
+        .site-name
+          h1.hidden= current_title
+          a#logo(href=url_for('.'))= config.title
+        #nav-menu
+          - for (var i in theme.menu)
+            +a_with_current(theme.menu[i].directory, __(theme.menu[i].page), theme.menu[i].icon)
 
     #layout.pure-g
       .pure-u-1.pure-u-md-3-4: .content_container
