--- a/layout/index.jade
+++ b/layout/index.jade
@@ -14,7 +14,10 @@ block content
         include _partial/helpers
         a(href=url_for(post.path))
           +title(post)
+        div(class='readmore')
+          a(href=url_for(post.path))= __('Readmore')
       .post-meta= post.date.format(config.date_format)
+      hr
       if theme.duoshuo
         a.ds-thread-count(data-thread-key=post.path, href=url_for(post.path) + '#comments')
       if theme.disqus
@@ -40,8 +43,7 @@ block content
         else
           .post-content
             != post.content.substring(0, br)
-      p(class='readmore')
-        a(href=url_for(post.path))= __('Readmore')
+
 
   include _partial/paginator
   if theme.disqus
